hphp/hack/test/typecheck/constraint_array_index/before/option_empty_shape_null_coalesce.php
<?hh
function f(?shape() $v): int {
  return $v["a"] ?? 0;
}
